--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/zmtheus/quatro-patas__BACK-#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "nodemon": "^2.0.16"
   }
 }
