--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "http": "0.0.1-security",
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
   }
 }
