--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express": "^4.18.1",
     "http": "0.0.1-security",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.2"
   }
 }
