--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
   },
   "homepage": "https://github.com/zmtheus/quatro-patas__BACK-#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "azure-storage": "^2.10.7",
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "http": "0.0.1-security",
+    "jest": "^28.1.0",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.19.2",
     "uuid": "^8.3.2"
   }
 }
