config and some other things

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^28.1.0",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16",
+    "sendgrid": "^5.2.3",
     "uuid": "^8.3.2"
   }
 }
