--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "guid": "0.0.12",
     "http": "0.0.1-security",
     "jest": "^28.1.0",
     "mongoose": "^6.3.4",
