--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "homepage": "https://github.com/zmtheus/quatro-patas__BACK-#readme",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^0.27.2",
     "azure-storage": "^2.10.7",
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "guid": "0.0.12",
+    "hapi-swagger": "^14.5.1",
     "http": "0.0.1-security",
+    "inert": "^5.1.3",
     "jest": "^28.1.0",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16",
